--- a/client/Ciphelet/app/src/main/res/layout/activity_main.xml
+++ b/client/Ciphelet/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.35000002">
 
             <EditText
                 android:id="@+id/registerPasswordInput"
